Quick sort algorithm has been implemented in Java and Python

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,13 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "type": "java",
+            "name": "QuickSort",
+            "request": "launch",
+            "mainClass": "QuickSort",
+            "projectName": "GrokkingAlgorithms_ca7e8a8"
+        },
+        {
             "name": "Python: Current File",
             "type": "python",
             "request": "launch",
